modules/aws_codebuild/security.tf
resource "aws_security_group" "security_for_codebuild" {
  name   = "Security for Codebuild"
  vpc_id = var.vpc-cluster-id
  # vpc_id = aws_vpc.codebuild_vpc.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
